--- a/ejercicio2.html
+++ b/ejercicio2.html
@@ -21,7 +21,8 @@
   	font-family: arial black;
   	font-size: 40px;
   	margin-left: 40px;
-	 }
+  	margin-bottom: -10px;
+  	 }
 
 	ul
 	{width: 400px; 
